--- a/index-desktop.html
+++ b/index-desktop.html
@@ -27,7 +27,7 @@
       <p>Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arricchire il CV, tu pensa ad arricchire le tue competenze.</p>
       <button>PARTIAMO!</button>
     </nav>
-    <main>
+    <div class="main">
       <!-- imgpc & text -->
 
       <div class="radiuspc">
@@ -53,7 +53,7 @@
           <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali.</p>
         </div>
       </div>
-    </main>
+    </div>
     <section>
       <!-- review -->
       <h3>Epicode garantisce</h3>
@@ -61,30 +61,36 @@
       <p class="mario">Mario Rossi</p>
       <p class="ceo">CEO, Epicode</p>
     </section>
-    <article>
+    <div class="article">
       <!-- article in box & img -->
-      <div class="box1">
-        <img src="/images/foto1.jpg" alt="il tuo pc" />
+      <div class="boxa">
+        <div class="box1">
+          <img src="/images/foto1.jpg" alt="il tuo pc" />
+        </div>
+        <div class="box2">
+          <h4>il tuo PC</h4>
+          <p>Se vuoi diventare developer è l’unico strumento di cui hai bisogno.</p>
+        </div>
       </div>
-      <div class="box2">
-        <h4>il tuo PC</h4>
-        <p>Se vuoi diventare developer è l’unico strumento di cui hai bisogno.</p>
+      <div class="boxb">
+        <div class="box3">
+          <img src="/images/foto2.jpg" alt="impara ora" />
+        </div>
+        <div class="box4">
+          <h4>Impara ora</h4>
+          <p>Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
+        </div>
       </div>
-      <div class="box3">
-        <img src="/images/foto2.jpg" alt="impara ora" />
+      <div class="boxc">
+        <div class="box5">
+          <img src="/images/foto3.jpg" alt="lavora subito" />
+        </div>
+        <div class="box6">
+          <h4>Lavora subito</h4>
+          <p>Sappiamo cosa vogliono le aziende, perché lavoriamo con lo</p>
+        </div>
       </div>
-      <div class="box4">
-        <h4>Impara ora</h4>
-        <p>Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
-      </div>
-      <div class="box5">
-        <img src="/images/foto3.jpg" alt="lavora subito" />
-      </div>
-      <div class="box6">
-        <h4>Lavora subito</h4>
-        <p>Sappiamo cosa vogliono le aziende, perché lavoriamo con lo</p>
-      </div>
-    </article>
+    </div>
     <footer>
       <!-- contact & copyright -->
       <address>
